Fixed handleTextOverflow() function bug where it wasn't putting the ellipsis on the end if there was a new line to be made

--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ button {
   display: none;
   flex-direction: column;
   overflow: hidden;
+  padding: 1rem;
 }
 
 .note-editor::backdrop {
